<resources>
    <string name="app_name">Github App</string>
    <string name="drawer_open">navigation drawer is open</string>
    <string name="drawer_close">navigation drawer is close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_home">Home</string>
    <string name="home_issues">Issues</string>
    <string name="home_pull_requests">Pull Requests</string>
    <string name="home_profile">Profile</string>
    <string name="issues_pull_requests_created">Created</string>
    <string name="issues_pull_requests_assigned">Assigned</string>
    <string name="issues_pull_requests_mentioned">Mentioned</string>
    <string name="profile_overview">Overview</string>
    <string name="profile_repositories">Repositories</string>
    <string name="profile_stars">Stars</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>
    <string name="issue_open">Open</string>
    <string name="issue_closed">Closed</string>
</resources>
